--- a/.env
+++ b/.env
@@ -24,13 +24,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mail.longsicong.com
-MAIL_PORT=465
-MAIL_USERNAME=info@longsicong.com
-MAIL_PASSWORD=Lexenter2020!
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=info@longsicong.com
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=a77e8a2fd7733a
+MAIL_PASSWORD=b60180aec39241
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=d1f5259a22-785e2b@inbox.mailtrap.io
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
